--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -27,7 +27,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        ref: master
+        ref: main
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Print Tag
