--- a/k8s/frontend-deployment-b.yaml
+++ b/k8s/frontend-deployment-b.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: frontend
-  name: frontend
+  name: frontend-b
 spec:
   replicas: 1
   selector:
@@ -16,7 +16,7 @@ spec:
         api: external
     spec:
       containers:
-      - image: testnasu/udagram-frontend-b:latest
+      - image: testnasu/udagram-frontend-b:v1.0.0
         name: frontend-b
         imagePullPolicy: Always
         ports:
