--- a/k8s/backend-feed-deployment.yaml
+++ b/k8s/backend-feed-deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    service: backend-feed
   name: backend-feed
+  labels:
+    app: backend-feed
 spec:
   replicas: 1
   selector:
