--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -7,7 +7,7 @@ concurrency:
     tags:
       - 'v*'
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -15,14 +15,19 @@ jobs:
         include:
           - image: udagram-api-feed
             path: ./udagram-api-feed
+            label: backend-feed
           - image: udagram-api-user
             path: ./udagram-api-user
+            label: backend-user
           - image: udagram-frontend-a
             path: ./udagram-frontend-a
+            label: frontend-a
           - image: udagram-frontend-b
             path: ./udagram-frontend-b
+            label: frontend-b
           - image: reverseproxy
             path: ./udagram-reverseproxy
+            label: reverseproxy
 
     steps:
     - uses: actions/checkout@v3
@@ -51,7 +56,7 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push
+    - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
         context: ${{ matrix.path }}
@@ -60,3 +65,21 @@ jobs:
         tags: |
           ${{ secrets.REGISTRY }}/${{ matrix.image }}:latest
           ${{ secrets.REGISTRY }}/${{ matrix.image }}:${{ steps.version.outputs.tag }}
+
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v3
+      id: install-kubectll
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-region: us-east-1
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+    - name: Update kube config
+      run: aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name ${{ secrets.AWS_EKS_CLUSTER }}
+
+    - name: Deploy to EKS
+      run: |
+        kubectl set image deployment/${{ matrix.label }} ${{ matrix.label }}=${{ secrets.REGISTRY }}/${{ matrix.image }}:${{ steps.version.outputs.tag }}
